# MetaSort

./: Cargo.toml  LICENSE.txt  MetaSort.command  PROJECT_STRUCTURE.md  README.md  Run_MetaSort.command
docs/: CROSS_PLATFORM_CHANGES.md  SIMPLE_INSTALL.md
scripts/: build_all.sh  build_macos.sh  build_windows.bat  install_windows.bat  install_windows.ps1
src/: csv_report.rs  filename_date_guess.rs  html_report.rs  main.rs  media_cleaning.rs  metadata_embed.rs  metadata_extraction.rs  platform.rs  sort_to_folders.rs  ui.rs  utils.rs
