[package]
name = "MetaSort"
version = "1.0.0"
edition = "2021"
authors = ["Sanmith S"]
description = "MetaSort v1 – Google Photos Takeout Organizer"

[dependencies]
walkdir = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
infer = "0.15"
csv = "1.3"
fs_extra = "1.3"
percent-encoding = "2"
url = "2"

# Note: exiftool must be installed on the system (external dependency) 