[package]
name = "MetaSort"
version = "1.0.0"
edition = "2021"
authors = ["Sanmith S"]
description = "MetaSort v1 – Cross-platform Google Photos Takeout Organizer"
license = "Apache-2.0"
repository = "https://github.com/iamsanmith/MetaSort"

[dependencies]
walkdir = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
csv = "1.3"
fs_extra = "1.3"
url = "2"
indicatif = "0.17"

# Note: exiftool must be installed on the system (external dependency)
# Cross-platform support: macOS, Windows, and Linux 